--- a/carpool-back/src/main/resources/application.properties
+++ b/carpool-back/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 quarkus.http.cors.enabled=true
 quarkus.http.cors.origins=http://localhost:4200
-%dev.quarkus.datasource.dev-ui.allow-sql=true
+quarkus.datasource.devservices.port=58393
