Add schedule and full schedule resources with corresponding services and models

--- a/carpool-back/src/main/resources/application.properties
+++ b/carpool-back/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 quarkus.http.cors.enabled=true
 quarkus.http.cors.origins=http://localhost:4200
 quarkus.datasource.devservices.port=58393
+%dev.quarkus.hibernate-orm.dev-ui.allow-hql=true
