--- a/carpool-back/src/main/resources/application.properties
+++ b/carpool-back/src/main/resources/application.properties
@@ -2,3 +2,4 @@ quarkus.http.cors.enabled=true
 quarkus.http.cors.origins=http://localhost:4200
 quarkus.datasource.devservices.port=58393
 %dev.quarkus.hibernate-orm.dev-ui.allow-hql=true
+%dev.quarkus.datasource.dev-ui.allow-sql=true
