--- a/carpool-back/src/main/resources/application.properties
+++ b/carpool-back/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 quarkus.http.cors.enabled=true
 quarkus.http.cors.origins=http://localhost:4200
+quarkus.datasource.devservices.reuse=true
 quarkus.datasource.devservices.port=58393
 %dev.quarkus.hibernate-orm.dev-ui.allow-hql=true
 %dev.quarkus.datasource.dev-ui.allow-sql=true
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.devservices.volumes."/local/test/data"=/var/lib/postgresql/data
+quarkus.hibernate-orm.schema-management.strategy=none
+
