Add Angular Material theme and update Snackbar service integration

--- a/carpool-back/src/main/resources/application.properties
+++ b/carpool-back/src/main/resources/application.properties
@@ -6,5 +6,5 @@ quarkus.datasource.devservices.port=58393
 %dev.quarkus.datasource.dev-ui.allow-sql=true
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.devservices.volumes."/local/test/data"=/var/lib/postgresql/data
-quarkus.hibernate-orm.schema-management.strategy=none
+#quarkus.hibernate-orm.schema-management.strategy=none
 
